# starfetch

./: .gitignore  ANSI-color-codes.h  CMakeLists.txt  README.md  ascii_logo.c  main.c
